# stockdatawrapper

./: CHANGELOG.md  CODEOWNERS  README.md  __init__.py  pyproject.toml
stockdatawrapper/: __init__.py  endpoints.py  stockdatawrapper.py  validation.json  validation.py
wrapper/: __init__.py  validation.json  validation.py  wrapper.py
